Complete Branch Booking Screen UI - Add SnackBar in Core for using throughout the application

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_map: ^8.2.2
   latlong2: ^0.9.1
   geolocator: ^14.0.2
+  another_flushbar: ^1.12.32
 
 dev_dependencies:
   flutter_test:
