--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   latlong2: ^0.9.1
   geolocator: ^14.0.2
   another_flushbar: ^1.12.32
+  go_router: ^17.0.0
 
 dev_dependencies:
   flutter_test:
