--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   geolocator: ^14.0.2
   another_flushbar: ^1.12.32
   go_router: ^17.0.0
+  pinput: ^6.0.1
 
 dev_dependencies:
   flutter_test:
