--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,12 @@ flutter:
   assets:
      - assets/svg/
      - assets/images/
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter_18pt-Regular.ttf
+        - asset: assets/fonts/Inter_18pt-Bold.ttf
+          weight: 700
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
