--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   another_flushbar: ^1.12.32
   go_router: ^17.0.0
   pinput: ^6.0.1
+  intl: ^0.19.0
+  country_picker: ^2.0.21
 
 dev_dependencies:
   flutter_test:
