--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   pinput: ^6.0.1
   intl: ^0.19.0
   country_picker: ^2.0.21
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
